Fix product display and action buttons on manage screen
- Update StatusService to handle products returned as an object map (associative array)
- Refactor manage.html to use th:data-* attributes for modal data passing, improving robustness
- Add unit test for object-map response parsing in ProductServiceTest
- Ensure all 53 tests pass

Co-authored-by: otewhatu-boop <249386691+otewhatu-boop@users.noreply.github.com>